--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /vendor
+/storage
 .env
 .phpunit.result.cache
 npm-debug.log
 yarn-error.log
 composer.lock
+bootstrap/cache/packages.php
+bootstrap/cache/services.php
