Fix tests on GitHub

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,10 @@ jobs:
           - laravel: 7.*
             testbench: 5.*
 
+          - laravel: 7.*
+            dependency-version: prefer-lowest
+            composer-version: --1
+
           - laravel: 8.*
             testbench: 6.*
 
@@ -45,8 +49,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          composer self-update ${{ matrix.composer-version }}
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
       - name: Execute tests
         run: vendor/bin/phpunit
