--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "7.*|8.*",
-        "illuminate/filesystem": "7.*|8.*",
-        "illuminate/console": "7.*|8.*"
+        "illuminate/support": "^7.0|^8.0",
+        "illuminate/filesystem": "^7.0|^8.0",
+        "illuminate/console": "^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "5.*|6.*",
+        "orchestra/testbench": "^5.0|^6.0",
+        "mockery/mockery": "^1.3.3",
         "phpunit/phpunit": "^8.4"
     },
     "autoload": {
