--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: [ 7.2, 7.3, 7.4, 8.0 ]
         laravel: [ 7.*, 8.* ]
