Change author email on all files [ci skip]

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Aaron Francis",
-            "email": "aaron@hammerstonehq.com"
+            "email": "aaron@hammerstone.dev"
         }
     ],
     "require": {
