Add debug command, docs.

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -18,6 +18,7 @@
                 "Filesystem": "/drivers/filesystem",
                 "Custom": "/drivers/custom"
             }
-        }
+        },
+        "Debugging": "/debugging"
     }
 }
