--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/filesystem": "^7.0|^8.0",
-        "illuminate/console": "^7.0|^8.0"
+        "php": "^7.2|^8.0.2",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "illuminate/filesystem": "^7.0|^8.0|^9.0",
+        "illuminate/console": "^7.0|^8.0|^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0",
