--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/console": "^7.0|^8.0|^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
         "mockery/mockery": "^1.3.3",
         "phpunit/phpunit": "^8.4"
     },
