--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0|^7.0",
         "mockery/mockery": "^1.3.3",
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.4|^9.5"
     },
     "autoload": {
         "psr-4": {
