--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0",
-        "illuminate/filesystem": "^7.0|^8.0|^9.0",
-        "illuminate/console": "^7.0|^8.0|^9.0"
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/filesystem": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/console": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
         "mockery/mockery": "^1.3.3",
         "phpunit/phpunit": "^8.4|^9.5"
     },
