--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,7 @@
   <testsuites>
     <testsuite name="TBD Test Suite">
       <directory>tests</directory>
+      <exclude>tests/BaseTest.php</exclude>
     </testsuite>
   </testsuites>
   <php>
