--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hammerstone/airdrop",
+    "name": "aaronfrancis/airdrop",
     "description": "A Laravel package to deploy your application faster by skipping asset compilation when possible.",
     "type": "library",
     "license": "MIT",
@@ -10,30 +10,30 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
-        "illuminate/filesystem": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
-        "illuminate/console": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
+        "php": "^8.1",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/filesystem": "^10.0|^11.0|^12.0",
+        "illuminate/console": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "mockery/mockery": "^1.3.3",
         "phpunit/phpunit": "^8.4|^9.5|^10.5|^11.5.3"
     },
     "autoload": {
         "psr-4": {
-            "Hammerstone\\Airdrop\\": "src/"
+            "AaronFrancis\\Airdrop\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Hammerstone\\Airdrop\\Tests\\": "tests/"
+            "AaronFrancis\\Airdrop\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Hammerstone\\Airdrop\\AirdropServiceProvider"
+                "AaronFrancis\\Airdrop\\AirdropServiceProvider"
             ]
         }
     }
