--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^11",
         "illuminate/filesystem": "^10.0|^11.0|^12.0",
         "illuminate/console": "^10.0|^11.0|^12.0"
     },
