--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Aaron Francis",
-            "email": "aaron@hammerstone.dev"
+            "email": "aaron@tryhardstudios.com"
         }
     ],
     "require": {
